--- a/script/install
+++ b/script/install
@@ -1,10 +1,38 @@
 #!/usr/bin/env bash
 
+echo -e "\n--> Download gulp-starter\n"
 curl -L https://github.com/mrhenry/gulp-starter/archive/master.zip > gulp-starter-master.zip
+
+echo -e "\n--> Extract\n"
 unzip gulp-starter-master.zip
+
+echo -e "\n--> Copy files\n"
 cp -R  gulp-starter-master/* ./
 cp -R  gulp-starter-master/.[^.]* ./
-rm -Rf ./gulp-starter-master*
+
+echo -e "\n--> Configure GIT\n"
 script/config-git
+
+echo -e "\n--> Install Bower componentes\n"
 bower install
+
+echo -e "\n--> Install node modules\n"
 npm install
+
+echo -e "\n--> Remove install files\n"
+rm -Rf ./gulp-starter-master*
+rm ./script/install
+
+echo -e "\n--> That's it folks!\n"
+
+cat << EOF
+_  _ ____ ___  ____    ___  _   _
+|\/| |__| |  \ |___    |__]  \_/
+|  | |  | |__/ |___    |__]   |
+
+_  _ ____     _  _ ____ _  _ ____ _   _
+|\/| |__/     |__| |___ |\ | |__/  \_/
+|  | |  \ .   |  | |___ | \| |  \   |
+
+--> Enjoy!
+EOF
