Removed bower, introduced JSPM as package manager & updated install & build scripts

--- a/script/install
+++ b/script/install
@@ -10,14 +10,18 @@ echo -e "\n--> Copy files\n"
 cp -R  gulp-starter-master/* ./
 cp -R  gulp-starter-master/.[^.]* ./
 
+echo -e "\n--> Bootstrap public folder\n"
+mkdir -p public
+cp -R bootstrap-public/* public/
+
 echo -e "\n--> Configure GIT\n"
 script/config-git
 
-echo -e "\n--> Install Bower componentes\n"
-bower install
-
 echo -e "\n--> Install node modules\n"
 npm install
+
+echo -e "\n--> Install jspm\n"
+jspm install
 
 echo -e "\n--> Remove install files\n"
 rm -Rf ./gulp-starter-master*
