--- a/script/install
+++ b/script/install
@@ -11,7 +11,23 @@ cp -R  gulp-starter-master/* ./
 cp -R  gulp-starter-master/.[^.]* ./
 
 echo -e "\n--> Bootstrap public folder\n"
-mkdir -p public
+if [ -f wp-config.php ]
+then
+  PROJECT_NAME=${PWD##*/}
+  PROJECT_NAME=${PROJECT_NAME/wp_/''}
+
+  if [ ! -d wp-content/themes/$PROJECT_NAME ]
+  then
+    mkdir -p $PROJECT_NAME
+  fi
+
+  ln -sfvn wp-content/themes/$PROJECT_NAME public
+
+else
+  mkdir -p public
+
+fi
+
 cp -R bootstrap-public/* public/
 
 echo -e "\n--> Configure GIT\n"
