Removed browsersync as we don't use it, fixed install script so it doesn't overwrite the project README

--- a/script/install
+++ b/script/install
@@ -7,6 +7,7 @@ echo -e "\n--> Extract\n"
 unzip gulp-starter-master.zip
 
 echo -e "\n--> Copy files\n"
+rm gulp-starter/README.md
 cp -R  gulp-starter-master/* ./
 cp -R  gulp-starter-master/.[^.]* ./
 
